# st-single-gene-calculator

./: README.md  requirements.txt  streamlit_app.py
.ipynb_checkpoints/: streamlit_app-checkpoint.py
PerTurbo/: LICENSE  README.md  hatch.toml  pyproject.toml
PerTurbo/src/perturbo/: __init__.py
PerTurbo/src/perturbo/models/: __init__.py  _constants.py  _model.py  _module.py
PerTurbo/src/perturbo/simulation/: __init__.py  _learn_data.py  _pyro_simulator.py  _simulate_data.py
save_model/model/: reference_stats_compact.npz
utils/: utils_single_core.py  utils_single_sweeps.py
utils/.ipynb_checkpoints/: utils_single_core-checkpoint.py  utils_single_plots-checkpoint.py
